--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,30 @@
 {
+  "env": {
+    "browser": true,
+    "es2021": true,
+    "node": true
+  },
   "extends": [
-    "next/core-web-vitals", 
+    "eslint:recommended",
+    "plugin:@typescript-eslint/recommended",
+    "plugin:react/recommended",
+    "plugin:react-hooks/recommended",
+    "next/core-web-vitals"
+  ],
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "ecmaVersion": 12,
+    "sourceType": "module"
+  },
+  "plugins": [
+    "react", 
+    "@typescript-eslint", 
+    "react-hooks", 
     "prettier"
-  ]
+  ], 
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
+  }
 }
