--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "eslint-plugin-prettier": "^5.1.3",
     "postcss": "^8",
     "prettier": "3.2.5",
+    "prettier-plugin-tailwindcss": "^0.5.11",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
