--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "zustand": "^4.5.1"
   },
   "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
