:package: Chore(prettier): 추가  trivago/prettier-plugin-sort-imports

--- a/.prettierrc
+++ b/.prettierrc
@@ -3,7 +3,10 @@
     "singleQuote": true,
     "tabWidth": 2,
     "trailingComma": "all",
-    "plugins": ["prettier-plugin-tailwindcss"],
+    "plugins": [
+        "prettier-plugin-tailwindcss",
+        "@trivago/prettier-plugin-sort-imports"
+    ],
     "importOrder": [
         "^react",
         "^next",
