--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "clsx": "^2.1.0",
     "cmdk": "^0.2.1",
     "embla-carousel-react": "^8.0.0",
+    "lucide": "^0.349.0",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
