--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@blocknote/core": "^0.12.0",
+    "@blocknote/react": "^0.12.0",
     "@hookform/resolvers": "^3.3.4",
     "@next/eslint-plugin-next": "^14.1.0",
     "@radix-ui/react-avatar": "^1.0.4",
