--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^0.2.1",
+    "date-fns": "^3.4.0",
     "embla-carousel-react": "^8.0.0",
     "lucide-react": "^0.349.0",
     "next": "14.1.0",
     "react": "^18",
+    "react-day-picker": "^8.10.0",
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
     "react-icons": "^5.0.1",
