📝 Docs(.github): 수정 git issue 생성 시 jira 자동 연동
project 이슈 티켓명 수정(HAEDALWEB -> HW)

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Create Issue 
       uses: atlassian/gajira-create@v3
       with:
-        project: HAEDALWEB
+        project: HW
         issuetype: Task
         summary: '${{ github.event.issue.title }}'
         description: '${{ github.event.issue.html_url }}'
