--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "cmdk": "^0.2.1",
     "date-fns": "^3.4.0",
     "embla-carousel-react": "^8.0.0",
+    "input-otp": "^1.2.4",
     "lucide-react": "^0.349.0",
     "next": "14.1.0",
     "react": "^18",
