--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "next": "14.2.5",
+    "next-safe-action": "^7.4.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
