:art: Style: auth import rule 추가

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,7 @@
     ],
     "paths": {
       "@/*": ["./src/*"],
-      "~login/*": ["./src/app/auth/login/*"]
+      "~auth/*": ["./src/app/auth/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
