:sparkles: Feat(acivity): 학기 선택 UI 추가
relate to: #159

--- a/.prettierrc
+++ b/.prettierrc
@@ -6,7 +6,7 @@
   "importOrder": [
     "^react(.*)$",
     "<THIRD_PARTY_MODULES>",
-    "^@/(components|constant|hook|lib|schema|service|store)/(.*)$",
+    "^@/(components|constant|hook|lib|schema|service|store|types)/(.*)$",
     "^~(.*)$",
     "^[./]"
   ],
